--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sf-wdi-25/express_self_api#readme",
   "dependencies": {
-    "express": "~4.13.3"
+    "express": "~4.13.3",
+    "body-parser": "~1.14.1"
   }
 }
